--- a/Meus Livros/style.css
+++ b/Meus Livros/style.css
@@ -10,24 +10,23 @@ header{
     padding: 5px;
     color: black;
     border: solid 1px;
-    background-size: 100%;
+
+
 }
 header ul{
     padding: 10px;
-    
-
+    list-style-type: none;
 }
 
 header ul li{
     display: inline;
-    margin: 15px;
+    margin: 5px;
     list-style-type: nome;
     color: black;
     background-color: rgb(218, 139, 193);
     padding: 5px;
     border-radius: 5px;
     border:solid 1px;
-    
     
 }
 header ul li a{
